Updated favicon and site description

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Nick Friedland",
+  "name": "Nick Friedland Personal Site",
   "icons": [
     {
       "src": "favicon.ico",
